Call EnsureTextRun() and null-check GetTextRun() return value before using it.  b=560780 r=roc